# ferris-agent-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE-MIT  README.md  README.zh.md
.github/workflows/: ci.yml
docs/: architecture.md  architecture.zh.md  roadmap.md  roadmap.zh.md
docs/design/: 0.1-daemon-lifecycle.md  0.1-daemon-lifecycle.zh.md  0.2-runtime-foundations.md  0.2-runtime-foundations.zh.md  0.3-runtime-orchestrator.md  0.3-runtime-orchestrator.zh.md
src/: adapter.rs  daemon.rs  main.rs
src/adapter/: agent.rs
src/daemon/: cleanup.rs  files.rs  lifecycle.rs  paths.rs  process_ops.rs  record.rs  startup.rs  status.rs  tests.rs
src/runtime/: config.rs  error.rs  event.rs  logging.rs  message.rs  mod.rs  orchestrator.rs  outbox.rs  persistence.rs  policy.rs  queue.rs  run.rs  session.rs  state.rs
src/runtime/outbox/: recovery.rs  retry.rs  worker.rs
src/runtime/policy/: access.rs  workspace.rs
src/runtime/state/: format.rs  model.rs  store.rs
src/runtime/state/format/: current.rs  mod.rs  versioned.rs  wire.rs
src/runtime/state/store/: core.rs  inbound.rs  locking.rs  mod.rs  outbound.rs  outbound_recovery.rs  outbound_resolution.rs  queue.rs  recovery.rs  run.rs
tests/: daemon_lifecycle.rs
