[package]
name = "ferris-agent-bridge"
version = "0.1.0"
edition = "2024"
authors = ["jacoesad <jacoesad@126.com>"]
description = "A Rust-first bridge for local AI agents to chat platforms."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jacoesad/ferris-agent-bridge"
readme = "README.md"
keywords = ["agent", "bridge", "relay", "cli", "chat"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
