[package]
name = "ferris-agent-bridge"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["jacoesad <jacoesad@126.com>"]
description = "A Rust-first bridge for local AI agents to chat platforms."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jacoesad/ferris-agent-bridge"
documentation = "https://docs.rs/ferris-agent-bridge"
readme = "README.md"
keywords = ["agent", "bridge", "relay", "cli", "chat"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
